current SVN:

* Build curl with metalink support.
* Import and build the libmetalink 0.1.3 library.
* Import and build the curl 7.46.0 library.
* Import and build the nghttp2 1.5.0 library.
* Import and build the libssh2 1.6.0 library.
* Import and build the c-ares 1.10.0 library.
* Microblaze fix for mbed TLS.
* Import and build the mbed TLS 2.2.0 libraries (Formerly PolarSSL).

version 0.1.20:

* Fixed non-x86_64 bin directories.
* Update to LLVM r254161.
* Update to LLVM r253660.

version 0.1.19:

* Update to LLVM r253132. Added lld.
* Fixed libncurses and libedit builds.
* Update to LLVM r252898.
* Update to LLVM r252410.

version 0.1.18:

* Update to LLVM r251722.
* Modifications to build Linux.
* Update to LLVM r251283.
* Update to LLVM r251219.
* Update to musl 1.1.12.
* Added a little 'm' makefile to build LLVMLinux with ELLCC (work in progress).
* Added ncurses C++ headers and library builds for wide character support.
* Make a link ncurses.h -> curses.h.

version 0.1.17:

* Update to LLVM r250619.
* Update to ncurses-6.0.
* Update to libedit-20150325-3.1.

version 0.1.16:

* Update to LLVM r249946.
* Update to LLVM r248750.
* Update to LLVM r248677.
* Update to LLVM r248571.

version 0.1.15:

* Update to LLVM r247783.
* Update to LLVM r247489.
* Update to LLVM r246642.
* Update to QEMU 2.4.0.
* Update to GDB 7.10.
* Update to musl 1.1.11.
* Update to LLVM r246362.
* Update to LLVM r244919.
* Update to LLVM r243216.
* Update to LLVM r242605.
* Update to LLVM r241992.
* Update to LLVM r241406.
* Update to LLVM r240899.
* Update to LLVM r239675.
* Update to LLVM r239219.
* Update to musl 1.1.10.
* Update to LLVM r238653.
* Update to LLVM r238024.
* Update to LLVM r237563.
* Update to LLVM r237533.

version 0.1.14:

* Added an ARMv6 config file: armv6-linux-engeabihf.
* Update to musl 1.1.9.
* Fixed bzip2 build.
* Updated the libunwind build location.
* Update to LLVM r236226.
* Update to QEMU 2.3.0.

version 0.1.13:

* Update to MinGW-w64 4.0.